Fix the overflow Plan Overview table

--- a/FinPal/wwwroot/css/app.css
+++ b/FinPal/wwwroot/css/app.css
@@ -154,7 +154,11 @@ h1, h2, h3, h4, h5, h6 {
 i.cursor-pointer:hover {
     color: var(--primary-color);
 }
-
+@media (max-width: 1199px) {
+    .mobile-no-padding {
+        padding:0;
+    }
+}
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
